@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.13 2003/09/28 21:08:59 sjg Exp $
+# $NetBSD: Makefile,v 1.14 2003/09/30 17:59:59 sjg Exp $
 #
 
-DISTNAME=	mk-20030928
-PKGNAME=	mk-files-20030928
+DISTNAME=	mk-20030930
+PKGNAME=	mk-files-20030930
 WRKSRC=		${WRKDIR}/mk
 CATEGORIES=	devel
 MASTER_SITES=   ftp://ftp.NetBSD.org/pub/incoming/sjg/
